# agents

./: README.md  pyproject.toml  report.md
src/class_action/: crew.py  main.py
src/class_action/config/: agents.yaml  tasks.yaml
