[project]
name = "class_action"
version = "0.1.0"
description = "class_action using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]>=1.15.1,<2.0.0",
]

[project.scripts]
class_action = "class_action.main:run"
run_crew = "class_action.main:run"
train = "class_action.main:train"
replay = "class_action.main:replay"
test = "class_action.main:test"
run_with_trigger = "class_action.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
